改善浏览体验

--- a/index.html
+++ b/index.html
@@ -1,46 +1,60 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AcFun Emotion</title>
+	<link href="favicon.ico" rel="shortcut icon">
+	<link type="text/css" rel="stylesheet" href="html/emotion.css">
+	<link type="text/css" rel="stylesheet" href="html/umeditor.css">
+	<style>
+	a {
+		color: #0366d6;
+		text-decoration: none;
+	}
+	</style>
 </head>
-
 <body>
-    <div class="edui-dropdown-menu edui-popup edui-popup-emotion" style="z-index: 2; width: 526px; display: block; top: 28px; left: 225px; position: absolute;">
-        <div class="edui-popup-body" unselectable="on" onmousedown="return false">
-            <link type="text/css" rel="stylesheet" href="html/emotion.css">
+    <div class="edui-dropdown-menu edui-popup edui-popup-emotion" style="z-index: 2; width: 780px; display: block; margin: 0 auto;">
+        <div class="edui-popup-body" unselectable="on" >
+			<div style="padding: 15px;">
+				<h1>AcFun 表情包</h1>
+				<p><a href="https://github.com/maijz128/acfun-emotion" rel="nofollow">GitHub</a></p>
+				<p><a href="http://www.acfun.cn/emot/" rel="nofollow">官方下载</a></p>
+			</div>
             <div class="edui-emotion-tab-Jpanel edui-emotion-wrapper">
                 <ul class="edui-emotion-Jtabnav edui-tab-nav">
                     <li class="edui-tab-item edui-active">
-                        <a data-context=".edui-emotion-Jtab0" hidefocus="true" class="edui-tab-text">AC娘</a>
+                        <a data-context=".edui-emotion-Jtab0" hidefocus="true" class="edui-tab-text" href="#emot-ac">AC娘</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab1" hidefocus="true" class="edui-tab-text">新娘</a>
+                        <a data-context=".edui-emotion-Jtab1" hidefocus="true" class="edui-tab-text" href="#emot-ac2">新娘</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab2" hidefocus="true" class="edui-tab-text">彩娘</a>
+                        <a data-context=".edui-emotion-Jtab2" hidefocus="true" class="edui-tab-text" href="#emot-ac3">彩娘</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab3" hidefocus="true" class="edui-tab-text">AC先锋</a>
+                        <a data-context=".edui-emotion-Jtab3" hidefocus="true" class="edui-tab-text" href="#emot-blizzard">AC先锋</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab4" class="edui-tab-text">匿名版</a>
+                        <a data-context=".edui-emotion-Jtab4" class="edui-tab-text" href="#emot-ais">匿名版</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab5" hidefocus="true" class="edui-tab-text">兔斯基</a>
+                        <a data-context=".edui-emotion-Jtab5" hidefocus="true" class="edui-tab-text" href="#emot-tsj">兔斯基</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab6" hidefocus="true" class="edui-tab-text">皮尔德</a>
+                        <a data-context=".edui-emotion-Jtab6" hidefocus="true" class="edui-tab-text" href="#emot-brd">皮尔德</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab7" hidefocus="true" class="edui-tab-text">TD猫</a>
+                        <a data-context=".edui-emotion-Jtab7" hidefocus="true" class="edui-tab-text" href="#emot-td">TD猫</a>
                     </li>
                     <li class="edui-tab-item">
-                        <a data-context=".edui-emotion-Jtab8" hidefocus="true" class="edui-tab-text">犬娘</a>
+                        <a data-context=".edui-emotion-Jtab8" hidefocus="true" class="edui-tab-text" href="#emot-dog">犬娘</a>
                     </li>
                     <li class="edui-emotion-tabs"></li>
                 </ul>
                 <div class="edui-tab-content edui-emotion-JtabBodys">
-                    <div class="edui-emotion-Jtab0 edui-tab-pane edui-active">
+                    <div id="emot-ac" class="edui-emotion-Jtab0 edui-tab-pane edui-active">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -436,7 +450,7 @@
                         </table>
 
                     </div>
-                    <div class="edui-emotion-Jtab1 edui-tab-pane">
+                    <div id="emot-ac2"class="edui-emotion-Jtab1 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -837,7 +851,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab2 edui-tab-pane">
+                    <div id="emot-ac3" class="edui-emotion-Jtab2 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -1208,7 +1222,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab3 edui-tab-pane">
+                    <div id="emot-blizzard" class="edui-emotion-Jtab3 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -1366,7 +1380,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab4 edui-tab-pane">
+                    <div id="emot-ais" class="edui-emotion-Jtab4 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -1664,7 +1678,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab5 edui-tab-pane">
+                    <div id="emot-tsj" class="edui-emotion-Jtab5 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -1962,7 +1976,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab6 edui-tab-pane">
+                    <div id="emot-brd" class="edui-emotion-Jtab6 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -2260,7 +2274,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab7 edui-tab-pane">
+                    <div id="emot-td" class="edui-emotion-Jtab7 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
@@ -2558,7 +2572,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="edui-emotion-Jtab8 edui-tab-pane">
+                    <div id="emot-dog" class="edui-emotion-Jtab8 edui-tab-pane">
                         <table border="1" class="edui-emotion-smileytable">
                             <tbody>
                                 <tr>
